--- a/.github/workflows/ol.yml
+++ b/.github/workflows/ol.yml
@@ -1,11 +1,11 @@
 # 
-# <https://github.com/KFERMercer/OpenWrt-L>
+# <https://github.com/KFERMercer/OpenWrt-CI>
 #
 # Copyright (C) 2019 P3TERX
 #
 # Copyright (C) 2020 KFERMercer
 #
-name: OpenWrt-L
+name: OpenWrt-CI
 
 on:
   schedule:
@@ -47,15 +47,12 @@ jobs:
           sudo -E apt-get -y install ack antlr3 aria2 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip libpython3-dev qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-
           df -h
-
       - name: Update feeds
         run: |
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
       - name: Generate configuration file
         run: make defconfig
 
@@ -63,7 +60,6 @@ jobs:
         run: |
           make download -j8
           find dl -size -1024c -exec rm -f {} \;
-
       - name: Compile firmware
         run: |
           make -j$(nproc) || make -j1 V=s
@@ -75,7 +71,6 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
-
       - name: Prepare artifact
         run: |
           mkdir -p ./artifact/firmware
@@ -85,7 +80,6 @@ jobs:
           cp -rf $(find ./bin/targets/ -type f) ./artifact/firmware/
           cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
-
       - name: Deliver buildinfo
         uses: actions/upload-artifact@v3
         with:
